Add List Detail View Controller
-  List Detail Page added
- 204 status code issue handled for the request of deleting a list

--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/List Cell/ListCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/List Cell/ListCell.xib
@@ -53,7 +53,7 @@
                                             <constraint firstItem="u7H-Lu-dhp" firstAttribute="bottom" secondItem="hFE-cu-rR0" secondAttribute="bottom" id="8UF-ce-xK5"/>
                                             <constraint firstItem="u7H-Lu-dhp" firstAttribute="top" secondItem="hFE-cu-rR0" secondAttribute="top" id="CAC-8l-cX9"/>
                                             <constraint firstItem="hFE-cu-rR0" firstAttribute="leading" secondItem="u7H-Lu-dhp" secondAttribute="leading" id="YDS-K6-5TZ"/>
-                                            <constraint firstItem="u7H-Lu-dhp" firstAttribute="height" secondItem="eL0-mq-yCk" secondAttribute="height" placeholder="YES" id="aco-wM-lO0"/>
+                                            <constraint firstItem="u7H-Lu-dhp" firstAttribute="height" secondItem="eL0-mq-yCk" secondAttribute="height" id="aco-wM-lO0"/>
                                             <constraint firstItem="u7H-Lu-dhp" firstAttribute="trailing" secondItem="hFE-cu-rR0" secondAttribute="trailing" id="qCg-BX-5fo"/>
                                             <constraint firstItem="u7H-Lu-dhp" firstAttribute="width" secondItem="eL0-mq-yCk" secondAttribute="width" placeholder="YES" id="yY8-cX-Bvc"/>
                                         </constraints>
