--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -192,7 +192,8 @@
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
                                         </state>
                                         <connections>
-                                            <segue destination="5H4-eo-fZs" kind="popoverPresentation" popoverAnchorView="3wl-eU-fkE" id="uri-Do-wKy">
+                                            <action selector="didAddListButtonPressed:" destination="SBA-Vi-5Ha" eventType="touchUpInside" id="R7m-hT-AVR"/>
+                                            <segue destination="5H4-eo-fZs" kind="popoverPresentation" identifier="toAddListSegue" popoverAnchorView="3wl-eU-fkE" id="uri-Do-wKy">
                                                 <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                             </segue>
                                         </connections>
@@ -222,6 +223,7 @@
                     <connections>
                         <outlet property="addListButton" destination="3wl-eU-fkE" id="QnO-hh-uxd"/>
                         <outlet property="listsTableView" destination="bUz-nq-7de" id="dhC-zT-pgK"/>
+                        <segue destination="fIc-QG-b2o" kind="show" identifier="listsToListDetailSegue" id="y4K-AT-1Vz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rMW-Fy-huj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -420,7 +422,108 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Y0-1D-RsF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2815.9420289855075" y="546.42857142857144"/>
+            <point key="canvasLocation" x="2930" y="416"/>
+        </scene>
+        <!--List Detail View Controller-->
+        <scene sceneID="yfJ-zl-Coh">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="fIc-QG-b2o" customClass="ListDetailViewController" customModule="Bazaar_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Alh-u0-ZdQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="04p-rM-R7Q">
+                                <rect key="frame" x="10" y="117.66666666666669" width="394" height="45"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJ9-ge-ULR">
+                                        <rect key="frame" x="10" y="0.0" width="374" height="45"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="694-1V-4vS">
+                                        <rect key="frame" x="10" y="11.333333333333329" width="15" height="22"/>
+                                        <color key="tintColor" red="0.99958151579999999" green="0.64487946029999998" blue="0.3569172323" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="chevron.left" catalog="system" symbolScale="large"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="medium"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didBackButtonPressed:" destination="fIc-QG-b2o" eventType="touchUpInside" id="P4o-Xg-amA"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="CJ9-ge-ULR" secondAttribute="trailing" constant="10" id="4LR-n3-B5c"/>
+                                    <constraint firstItem="CJ9-ge-ULR" firstAttribute="leading" secondItem="04p-rM-R7Q" secondAttribute="leading" constant="10" id="INc-6b-wCx"/>
+                                    <constraint firstAttribute="bottom" secondItem="CJ9-ge-ULR" secondAttribute="bottom" id="KBX-CM-nt7"/>
+                                    <constraint firstItem="694-1V-4vS" firstAttribute="leading" secondItem="04p-rM-R7Q" secondAttribute="leading" constant="10" id="KYp-Zf-3JB"/>
+                                    <constraint firstItem="694-1V-4vS" firstAttribute="centerY" secondItem="CJ9-ge-ULR" secondAttribute="centerY" id="Tmh-8z-iVE"/>
+                                    <constraint firstItem="CJ9-ge-ULR" firstAttribute="top" secondItem="04p-rM-R7Q" secondAttribute="top" id="fp1-M9-5hP"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="bzA-a1-tJQ">
+                                <rect key="frame" x="10" y="54" width="394" height="53.666666666666657"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="kUk-uB-8e3">
+                                        <rect key="frame" x="0.0" y="5.3333333333333357" width="39.333333333333336" height="43"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                    <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search in list..." translatesAutoresizingMaskIntoConstraints="NO" id="xnv-Gg-64V">
+                                        <rect key="frame" x="59.333333333333343" y="0.0" width="334.66666666666663" height="53.666666666666664"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="kUk-uB-8e3" firstAttribute="height" secondItem="bzA-a1-tJQ" secondAttribute="height" multiplier="0.8" id="cPI-vE-Dbt"/>
+                                    <constraint firstItem="kUk-uB-8e3" firstAttribute="width" secondItem="bzA-a1-tJQ" secondAttribute="width" multiplier="0.1" id="fh6-Ea-E53"/>
+                                </constraints>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4hr-He-qii" userLabel="List Products Table View">
+                                <rect key="frame" x="10" y="172.66666666666669" width="394" height="630.33333333333326"/>
+                                <color key="backgroundColor" systemColor="tertiarySystemFillColor"/>
+                                <color key="separatorColor" systemColor="tertiarySystemFillColor"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="fIc-QG-b2o" id="qns-P5-VTt"/>
+                                    <outlet property="delegate" destination="fIc-QG-b2o" id="ove-nz-HNk"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="I1P-vQ-31m"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4hr-He-qii" firstAttribute="top" secondItem="04p-rM-R7Q" secondAttribute="bottom" constant="10" id="41R-9I-hgJ"/>
+                            <constraint firstItem="4hr-He-qii" firstAttribute="leading" secondItem="I1P-vQ-31m" secondAttribute="leading" constant="10" id="BjV-iY-fLi"/>
+                            <constraint firstItem="bzA-a1-tJQ" firstAttribute="leading" secondItem="I1P-vQ-31m" secondAttribute="leading" constant="10" id="ElO-Kq-72h"/>
+                            <constraint firstItem="04p-rM-R7Q" firstAttribute="top" secondItem="bzA-a1-tJQ" secondAttribute="bottom" constant="10" id="J7l-oa-bjO"/>
+                            <constraint firstItem="I1P-vQ-31m" firstAttribute="trailing" secondItem="4hr-He-qii" secondAttribute="trailing" constant="10" id="L1i-Vk-pjU"/>
+                            <constraint firstItem="04p-rM-R7Q" firstAttribute="leading" secondItem="I1P-vQ-31m" secondAttribute="leading" constant="10" id="Psc-rD-Aea"/>
+                            <constraint firstItem="04p-rM-R7Q" firstAttribute="centerX" secondItem="I1P-vQ-31m" secondAttribute="centerX" id="QFY-rv-EwC"/>
+                            <constraint firstAttribute="trailing" secondItem="bzA-a1-tJQ" secondAttribute="trailing" constant="10" id="fi1-bx-LLR"/>
+                            <constraint firstItem="bzA-a1-tJQ" firstAttribute="height" secondItem="Alh-u0-ZdQ" secondAttribute="height" multiplier="0.06" id="hio-Aa-TUt"/>
+                            <constraint firstItem="I1P-vQ-31m" firstAttribute="bottom" secondItem="4hr-He-qii" secondAttribute="bottom" constant="10" id="jMn-MG-ows"/>
+                            <constraint firstItem="04p-rM-R7Q" firstAttribute="height" secondItem="Alh-u0-ZdQ" secondAttribute="height" multiplier="0.05" id="ju8-yy-G1U"/>
+                            <constraint firstItem="I1P-vQ-31m" firstAttribute="trailing" secondItem="04p-rM-R7Q" secondAttribute="trailing" constant="10" id="uUi-b4-6Hy"/>
+                            <constraint firstItem="bzA-a1-tJQ" firstAttribute="top" secondItem="I1P-vQ-31m" secondAttribute="top" constant="10" id="zyV-Py-qrB"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="zik-F0-NM6"/>
+                    <connections>
+                        <outlet property="listNameLabel" destination="CJ9-ge-ULR" id="8pz-Vo-RDA"/>
+                        <outlet property="productListTableView" destination="4hr-He-qii" id="WDm-qy-bmY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Iw-Vj-E7E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2929" y="805"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="JWB-Zj-dQg">
@@ -1396,7 +1499,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="coF-T2-djX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3477" y="299"/>
+            <point key="canvasLocation" x="4141" y="295"/>
         </scene>
         <!--Coupons View Controller-->
         <scene sceneID="uvk-di-2Jw">
@@ -1413,7 +1516,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RKQ-vW-ixk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3477" y="1655"/>
+            <point key="canvasLocation" x="4141" y="1663"/>
         </scene>
         <!--Notifications View Controller-->
         <scene sceneID="59n-F3-LFM">
@@ -1430,7 +1533,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yCH-cK-zFT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3477" y="991"/>
+            <point key="canvasLocation" x="4141" y="1003"/>
         </scene>
         <!--Help View Controller-->
         <scene sceneID="cyr-zY-k8I">
@@ -1447,7 +1550,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="97g-I1-fpd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3477" y="3026"/>
+            <point key="canvasLocation" x="4141" y="3032"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="TL3-WD-evW">
@@ -1464,7 +1567,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="04I-9o-yxg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3477" y="2346"/>
+            <point key="canvasLocation" x="4141" y="2373"/>
         </scene>
     </scenes>
     <designables>
@@ -1486,6 +1589,7 @@
         <image name="bell" catalog="system" width="128" height="124"/>
         <image name="cart" catalog="system" width="128" height="102"/>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="gear" catalog="system" width="128" height="119"/>
         <image name="gift" catalog="system" width="128" height="124"/>
         <image name="google_icon" width="300" height="300"/>
