--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -205,15 +205,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Products of The Day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdE-CP-22q">
-                                <rect key="frame" x="10" y="216.66666666666663" width="394" height="20.333333333333343"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subcategories" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdE-CP-22q">
+                                <rect key="frame" x="10" y="216.66666666666666" width="394" height="20.333333333333343"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nig-Wl-rKw">
-                                <rect key="frame" x="10" y="161.66666666666663" width="394" height="35"/>
+                                <rect key="frame" x="10" y="161.66666666666666" width="394" height="35"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="bYL-Of-CXK"/>
@@ -226,7 +226,7 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" directionalLockEnabled="YES" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gm8-nq-kQb">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gm8-nq-kQb">
                                 <rect key="frame" x="10" y="247" width="394" height="566"/>
                                 <color key="backgroundColor" systemColor="tertiarySystemFillColor"/>
                                 <color key="separatorColor" systemColor="tertiarySystemFillColor"/>
@@ -276,22 +276,16 @@
                                                                 <constraint firstAttribute="width" secondItem="fa0-Rf-uKL" secondAttribute="height" multiplier="1:1" id="IJO-pm-CrH"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADm-dF-CWp" userLabel="searchCellLabel">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADm-dF-CWp" userLabel="searchCellLabel">
                                                             <rect key="frame" x="30.333333333333343" y="11.666666666666666" width="290.33333333333326" height="20.333333333333336"/>
                                                             <accessibility key="accessibilityConfiguration" identifier="searchWordLabel"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="290.33333333333326" id="Scm-gw-dZd"/>
-                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.26605003240000002" green="0.26605003240000002" blue="0.26605003240000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21A-uR-u78" userLabel="categoryLabel">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21A-uR-u78" userLabel="categoryLabel">
                                                             <rect key="frame" x="330.66666666666669" y="11.666666666666666" width="43.333333333333314" height="20.333333333333336"/>
                                                             <accessibility key="accessibilityConfiguration" identifier="searchResultTypeLabel"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="43.333333333333314" id="PfX-cn-d4r"/>
-                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemGrayColor"/>
                                                             <nil key="highlightedColor"/>
@@ -320,8 +314,8 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vef-0J-N2F" userLabel="loadingView">
-                                <rect key="frame" x="10" y="108" width="404" height="238"/>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vef-0J-N2F" userLabel="loadingView">
+                                <rect key="frame" x="10" y="108" width="394" height="705"/>
                                 <subviews>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Xsy-i7-8O3">
                                         <rect key="frame" x="192" y="675" width="20" height="20"/>
@@ -340,10 +334,11 @@
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="Nig-Wl-rKw" secondAttribute="trailing" constant="10" id="3Da-GG-EDE"/>
                             <constraint firstItem="cd3-kA-RHI" firstAttribute="bottom" secondItem="Avc-l0-GQU" secondAttribute="bottom" id="3EZ-zq-V0d"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="leading" secondItem="Avc-l0-GQU" secondAttribute="leading" constant="10" id="3n5-iK-TUi"/>
+                            <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="Gm8-nq-kQb" secondAttribute="trailing" constant="10" id="6aL-2q-rvd"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="top" secondItem="Avc-l0-GQU" secondAttribute="top" constant="10" id="8zh-Lu-fOK"/>
                             <constraint firstItem="Avc-l0-GQU" firstAttribute="trailing" secondItem="cd3-kA-RHI" secondAttribute="trailing" id="DYV-gu-Abs"/>
                             <constraint firstItem="Gm8-nq-kQb" firstAttribute="top" secondItem="qdE-CP-22q" secondAttribute="bottom" constant="10" id="FOO-6e-BZZ"/>
-                            <constraint firstItem="Vef-0J-N2F" firstAttribute="centerY" secondItem="qdE-CP-22q" secondAttribute="centerY" id="HAF-Si-cUI"/>
+                            <constraint firstItem="Vef-0J-N2F" firstAttribute="bottom" secondItem="Avc-l0-GQU" secondAttribute="bottom" id="HAF-Si-cUI"/>
                             <constraint firstItem="cd3-kA-RHI" firstAttribute="top" secondItem="VyQ-id-LOf" secondAttribute="bottom" id="JgJ-Od-bo2"/>
                             <constraint firstItem="VyQ-id-LOf" firstAttribute="height" secondItem="qNC-4y-a2E" secondAttribute="height" multiplier="0.06" id="KhQ-X9-ALK"/>
                             <constraint firstItem="qdE-CP-22q" firstAttribute="top" secondItem="Nig-Wl-rKw" secondAttribute="bottom" constant="20" id="MWB-61-RPe"/>
@@ -364,11 +359,12 @@
                         <outlet property="activityIndicator" destination="Xsy-i7-8O3" id="US8-1F-yW7"/>
                         <outlet property="categoryCollectionView" destination="Nig-Wl-rKw" id="pun-LF-iRu"/>
                         <outlet property="loadingView" destination="Vef-0J-N2F" id="lvD-qn-n3c"/>
-                        <outlet property="productTableView" destination="Gm8-nq-kQb" id="m8i-60-mZ6"/>
                         <outlet property="searchBar" destination="kf3-Gc-Gfe" id="19J-Dq-lMG"/>
                         <outlet property="searchHistoryTableView" destination="cd3-kA-RHI" id="IHk-C8-kKL"/>
+                        <outlet property="subCategoriesTableView" destination="Gm8-nq-kQb" id="q9M-gr-9Uy"/>
                         <segue destination="bKq-Op-bwT" kind="show" identifier="categoriesToSearchResultsSegue" id="SrW-kQ-x4p"/>
                         <segue destination="RgT-CZ-30c" kind="show" identifier="categoriesToProductDetailSegue" id="CHd-uw-vgy"/>
+                        <segue destination="bKq-Op-bwT" kind="show" identifier="categoriesToResultsSegue" id="1FR-vb-eQq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJk-4d-NV0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1756,7 +1752,7 @@
     </designables>
     <inferredMetricsTieBreakers>
         <segue reference="CHd-uw-vgy"/>
-        <segue reference="SrW-kQ-x4p"/>
+        <segue reference="1FR-vb-eQq"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
     <resources>
@@ -1778,8 +1774,8 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="profilepic" width="652" height="649"/>
         <image name="questionmark.square" catalog="system" width="128" height="114"/>
-        <image name="xmark.circle" width="13" height="13"/>
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
+        <image name="xmark.circle" width="13" height="13"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
