Display username after login or sign up on profile page

--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -866,8 +866,8 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="superman@dailyplanet.com" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Yf4-y2-3zC">
-                                        <rect key="frame" x="63.333333333333343" y="15" width="320.66666666666663" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Yf4-y2-3zC">
+                                        <rect key="frame" x="63.333333333333343" y="27" width="320.66666666666663" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" red="1" green="0.62352941176470589" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -879,9 +879,8 @@
                                     <constraint firstItem="m86-Em-bXp" firstAttribute="width" secondItem="6aG-k9-JXU" secondAttribute="width" multiplier="0.1" id="tVi-vL-vNF"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8j-iX-P6E">
-                                <rect key="frame" x="153" y="751" width="109" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8j-iX-P6E">
+                                <rect key="frame" x="153" y="739.33333333333337" width="109" height="30"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="temporaryLogoutButton:" destination="q6p-hj-l31" eventType="touchUpInside" id="zMd-nw-Onh"/>
@@ -1201,6 +1200,7 @@
                         <constraints>
                             <constraint firstItem="lq5-Wk-g3R" firstAttribute="height" secondItem="Oxh-6n-5kT" secondAttribute="height" multiplier="0.6" id="8oC-IT-yEZ"/>
                             <constraint firstItem="lq5-Wk-g3R" firstAttribute="leading" secondItem="M3M-oV-sm5" secondAttribute="leading" constant="20" id="Ccf-ct-LXZ"/>
+                            <constraint firstItem="A8j-iX-P6E" firstAttribute="top" secondItem="lq5-Wk-g3R" secondAttribute="bottom" constant="10" id="ENu-gt-a1l"/>
                             <constraint firstItem="M3M-oV-sm5" firstAttribute="trailing" secondItem="6aG-k9-JXU" secondAttribute="trailing" constant="10" id="FDg-6Y-31N"/>
                             <constraint firstItem="lq5-Wk-g3R" firstAttribute="top" secondItem="6aG-k9-JXU" secondAttribute="bottom" constant="40" id="Koo-Kx-Udj"/>
                             <constraint firstItem="6aG-k9-JXU" firstAttribute="height" secondItem="Oxh-6n-5kT" secondAttribute="height" multiplier="0.06" id="cGu-fv-SO7"/>
@@ -1224,7 +1224,6 @@
         <!--Orders View Controller-->
         <scene sceneID="FcG-FD-LaT">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="coF-T2-djX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="lLX-v8-Ua7" userLabel="Orders View Controller" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Mtc-QS-jre">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1235,13 +1234,13 @@
                     <navigationItem key="navigationItem" id="IGZ-bG-UhC"/>
                     <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="coF-T2-djX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3477" y="299"/>
         </scene>
         <!--Coupons View Controller-->
         <scene sceneID="uvk-di-2Jw">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RKQ-vW-ixk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="oXo-Ka-Je9" userLabel="Coupons View Controller" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hac-Dy-bGZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1252,13 +1251,13 @@
                     <navigationItem key="navigationItem" id="yzg-eU-yQc"/>
                     <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RKQ-vW-ixk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3477" y="1655"/>
         </scene>
         <!--Notifications View Controller-->
         <scene sceneID="59n-F3-LFM">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yCH-cK-zFT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="TJD-Jk-gCf" userLabel="Notifications View Controller" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8ph-Sm-qwV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1269,13 +1268,13 @@
                     <navigationItem key="navigationItem" id="QBj-4b-ZYU"/>
                     <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yCH-cK-zFT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3477" y="991"/>
         </scene>
         <!--Help View Controller-->
         <scene sceneID="cyr-zY-k8I">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="97g-I1-fpd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="Yqk-wp-E9p" userLabel="Help View Controller" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ygv-gJ-VrI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1286,13 +1285,13 @@
                     <navigationItem key="navigationItem" id="yaw-EX-2El"/>
                     <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="97g-I1-fpd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3477" y="3026"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="TL3-WD-evW">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="04I-9o-yxg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="e6f-iy-N7J" userLabel="Settings View Controller" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r41-NW-Cd7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1303,6 +1302,7 @@
                     <navigationItem key="navigationItem" id="B6j-A6-4Kg"/>
                     <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="04I-9o-yxg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3477" y="2346"/>
         </scene>
